[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hlid"
version = "0.1.3"
description = "HLID: a Human Lexicographically (sortable) Identifier"
authors = ["Nicholas de Jong <contact@threatpatrols.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "hlid", from = "src" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["HLID", "UUID", "ULID", "Sortable"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/threatpatrols/hlid/issues"
Documentation = "https://github.com/threatpatrols/hlid"
Homepage = "https://pypi.python.org/pypi/hlid/"
Repository = "https://github.com/threatpatrols/hlid"


[tool.poetry.dependencies]
python = "^3.8"
typing = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pycln = "^2.1.3"
pytest = "*"

[tool.slap]
typed = true
release.branch = "dev"

[tool.slap.test]
check  = "slap check"
black  = "black --check src/ tests/"
flake8 = "flake8 src/ tests/"
isort  = "isort --check-only src/ tests/"
mypy   = "dmypy run src/"
pycln  = "pycln src/ tests/ --check"
pytest = "pytest tests/ -vv"

[tool.slap.run]
format = "pycln src/ tests/ && black src/ tests/ && isort src/ tests/"

[tool.mypy]
strict = true
python_version = "3.10"
explicit_package_bases = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
show_error_codes = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true

[tool.black]
line-length = 120
